# r4-edu-device

./: .gitignore  Dockerfile  README.md  ROADMAP.md  feature-gap-analysis.md  pyproject.toml  run_dev.py  verify_e2e.py  whos-stuck-grid-design.md  wifi-provision-guide.md
docs/: API.md  DEPLOY.md  README.md
docs/assets/: open-lane.excalidraw  r4-laptop-concept.excalidraw  r4-swarm-architecture.excalidraw  whos-stuck-wireframe.excalidraw
firmware/: README.md
firmware/r4_swarm/: config.h  r4_swarm.ino
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  states.js  style.css
frontend/src/components/: DetailPanel.vue  DeviceTile.vue
infra/: docker-compose.full.yml  docker-compose.yml
infra/mosquitto/: aclfile  mosquitto.conf
server/: app.py  content.py  contract.py  dev_broker.py  persistence.py  registry.py  security.py  store.py
sim/: simulate.py
