[project]
name = "r4-swarm-server"
version = "0.1.0"
description = "R4 Swarm — Phase 1: Who's-Stuck grid (broker + backend + simulator)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiomqtt>=2.3",
    "pydantic>=2.7",
    "amqtt>=0.11.0",
]

[tool.uv]
package = false
